fix: bag with navbar on ios

--- a/components/Navbar/NavMenu.scss
+++ b/components/Navbar/NavMenu.scss
@@ -87,6 +87,7 @@
 
         &.md {
             transform: translate(0);
+            -webkit-transform: translate(0);
         }
 
         .nav-item>a {
